# VinylGoblin

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: linux.yml  macos.yml  macos_arm64.yml  macos_x64.yml  main.yml  windows.yml
src/vinyl_goblin/: __main__.py  banner.txt
src/vinyl_goblin/shops/: __init__.py  blackened_records.py  catalog_music.py  dutch_vinyl.py  glitter_records.py  hideous_records.py  jet_black_cat_records.py  monster_robot.py  record_exchange.py  relove_oxley.py  rockaway_records.py  rocking_horse_records.py  shop.py  sonic_sherpa.py  spin_and_groove_records.py  stash_records.py  waxx_lyrical.py
